[package]
name        = "copper"
authors     = ["ffminus <ffminus@protonmail.com>"]
description = "A constraint programming solver for Rust"
version     = "0.1.0"
edition     = "2021"
license     = "LICENSE"
repository  = "https://github.com/ffminus/copper"
readme      = "README.md"
keywords    = ["solver", "constraint"]
categories  = ["mathematics", "science"]


[lib]
crate-type = ["cdylib", "rlib"]


[features]
wasm = ["dep:wasm-bindgen"]


[dependencies]
# Bindings generation for WASM
wasm-bindgen = { version = "0.2.82", optional = true }


[dev-dependencies]
criterion  = "0.3.6" # Benchmark harness
serde_json = "1.0"   # JSON serializer

# Serialization framework
serde = { version = "1.0", features = ["derive"] }


[[bench]]
name    = "knapsack"
harness = false
