[package]
name         = "copper"
version      = "0.0.1"
authors      = ["ffminus <ffminus@protonmail.com>"]
edition      = "2021"
rust-version = "1.77"
description  = "A constraint programming solver."
readme       = "README.md"
repository   = "https://github.com/ffminus/copper"
license      = "MIT"
keywords     = ["solver", "constraint programming"]
categories   = ["constraint programming"]


[dependencies]
