cargo-features = ["edition2024"]

[package]
name         = "copper"
version      = "0.0.1"
authors      = ["ffminus <ffminus@protonmail.com>"]
edition      = "2024"
rust-version = "1.77"
description  = "A constraint programming solver."
readme       = "README.md"
repository   = "https://github.com/ffminus/copper"
license      = "MIT"
keywords     = ["solver", "constraint programming"]
categories   = ["constraint programming"]


[dependencies]
dyn-clone = "1.0" # Clone trait objects


[lints.clippy]
cargo    = "warn"
nursery  = "warn"
pedantic = "warn"

doc_markdown       = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }

[lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests        = "warn"
unescaped_backticks      = "warn"

[lints.rust]
rust-2021-compatibility = "warn"

unsafe_code = "forbid"

absolute_paths_not_starting_with_crate = "warn"
explicit_outlives_requirements         = "warn"
ffi_unwind_calls                       = "warn"
keyword_idents                         = "warn"
let_underscore_drop                    = "warn"
macro_use_extern_crate                 = "warn"
meta_variable_misuse                   = "warn"
missing_abi                            = "warn"
missing_docs                           = "warn"
non_ascii_idents                       = "warn"
pointer_structural_match               = "warn"
single_use_lifetimes                   = "warn"
trivial_casts                          = "warn"
trivial_numeric_casts                  = "warn"
unsafe_op_in_unsafe_fn                 = "warn"
unused_extern_crates                   = "warn"
unused_import_braces                   = "warn"
unused_lifetimes                       = "warn"
unused_macro_rules                     = "warn"
unused_qualifications                  = "warn"
unused_results                         = "warn"
unused_tuple_struct_fields             = "warn"
variant_size_differences               = "warn"
